# mercuto-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks_and_tests.yml  publish_to_pypi.yml
examples/: example_api_usage.py
mercuto_client/: __init__.py  client.py  exceptions.py
mercuto_client/_tests/test_ingester/: test_backup.py  test_file_processor.py  test_ftp.py  test_parsers.py
mercuto_client/_tests/test_ingester/resources/: worldsensing-standard-sample-file.csv
mercuto_client/_tests/test_mocking/: test_mock_endpoint.py
mercuto_client/ingester/: README.md  __main__.py  backup.py  backup_paramiko.py  ftp.py  mercuto.py  pid_file.py  processor.py  util.py
mercuto_client/ingester/parsers/: generic_csv.py  worldsensing.py
mercuto_client/mocks/: __init__.py  mock_connect.py  mock_core.py  mock_data.py  mock_endpoint.py  mock_media.py  mock_notifications.py
mercuto_client/modules/: _util.py  alerts.py  connect.py  core.py  data.py  devices.py  endpoint.py  media.py  notifications.py
