[project]
name = "mercuto-client"
authors = [{ name = "Daniel Whipp", email = "daniel.whipp@rocktech.com.au" }]
description = "Library for interfacing with Rockfield's Mercuto API"
requires-python = ">=3.10"
dependencies = [
    'requests>=2.32',
    "pyftpdlib>=2.0.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "schedule>=1.2.2",
    'pydantic>=2.0',
    'zc.lockfile>=4.0'
]
version = "0.0.0"  # This will be replaced by the workflow
keywords = ["mercuto", "rockfield", "infratech"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Homepage = "https://mercuto.rockfieldcloud.com.au"
Repository = "https://github.com/RockfieldTechnologiesAustralia/mercuto-client"
Documentation = "https://github.com/RockfieldTechnologiesAustralia/mercuto-client/blob/main/README.md"

[dependency-groups]
tests = [
    "types-requests>=2.32.4.20250611",
    "freezegun>=1.5.2",
    "types-python-dateutil>=2.9.0.20250516",
    "types-pytz>=2025.2.0.20250516",
    "pytest>=8.4.0",
    "flake8>=7.2.0",
    "mypy>=1.16.1",
    "isort>=6.0.1",
    "pandas>=2.3.2",
    "mock-ssh-server>=0.9.1",
    "types-paramiko>=4.0.0.20250822"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mercuto_client = ["py.typed"]

[tool.mypy]
strict = false

[project.scripts]
mc-ftp-ingester = "mercuto_client.ingester.__main__:main"
